# terrain-lod

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.h
src/engine/: camera.cpp  camera.h  compute_shader.h  scene_object.h  shader.h  terrain.cpp  terrain.h
src/shaders/: shader.frag  shader.vert  terrain_gen.comp  terrain_lod.tese
src/utils/: aabb.h  plane.h
